tdf#107298 Rename Snap Position to Constrain Objects

Also took the chance to update some outdated UIHints

Change-Id: I21d62ae475e1853f9092204c85eef209207987d0